# voxell_website

./: .gitmodules  CNAME  Cargo.toml  build_wasm.nu  index.html  voxell_website.js
assets/icons/: credits.md
assets/typst/: main.typ
src/: lib.rs  main.rs
